# strawberry-django-optimizer

./: LICENSE  README.md  dev_requirements.txt  pytest.ini  setup.cfg
src/strawberry_django_optimizer/: __init__.py  field.py  hints.py  query.py  resolver.py  store.py
tests/fruit/: manage.py  settings.py  urls.py
tests/fruit/fruits/: models.py  schema.py  tests.py  urls.py
tests/fruit/fruits/tests/: fixtures.py  test_fragments.py  test_related_fields.py  utils.py
