[metadata]
name = strawberry-django-optimizer
version = 0.0.1
author = OPTENDA GmbH
author_email = openda@steag.com
description = Automatic query optimization for django and strawberry-graphql
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/energy-efficiency/strawberry-django-optimizer
project_urls =
    Bug Tracker = https://github.com/energy-efficiency/strawberry-django-optimizer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src